devel/libpthread_dbg/files/pthread.h

int	pthread_create(pthread_t * __restrict,
	    const pthread_attr_t * __restrict, void *(*)(void *),
	    void * __restrict);
void	pthread_exit(void *) __attribute__((__noreturn__));
pthread_t	pthread_self(void);
int	pthread_attr_init(pthread_attr_t *);
int	pthread_attr_destroy(pthread_attr_t *);
int	pthread_attr_setinheritsched(pthread_attr_t *, int);
int	pthread_attr_setschedparam(pthread_attr_t * __restrict,
    const struct sched_param * __restrict);
int	pthread_attr_setschedpolicy(pthread_attr_t *, int);
int	pthread_attr_setscope(pthread_attr_t *, int);
int	pthread_attr_setstacksize(pthread_attr_t *, size_t);
int	pthread_attr_setdetachstate(pthread_attr_t *, int);
int	pthread_mutex_init(pthread_mutex_t * __restrict,
	    const pthread_mutexattr_t * __restrict);
int	pthread_mutex_destroy(pthread_mutex_t *);
int	pthread_mutex_lock(pthread_mutex_t *);
int	pthread_mutex_unlock(pthread_mutex_t *);
int	pthread_mutexattr_init(pthread_mutexattr_t *);
int	pthread_mutexattr_destroy(pthread_mutexattr_t *);
int	pthread_mutexattr_setprotocol(pthread_mutexattr_t*,
	    int);
int	pthread_mutexattr_setprioceiling(pthread_mutexattr_t *,
	    int);
int	pthread_cond_init(pthread_cond_t * __restrict,
	    const pthread_condattr_t * __restrict);
int	pthread_cond_destroy(pthread_cond_t *);
int	pthread_cond_wait(pthread_cond_t * __restrict,
	    pthread_mutex_t * __restrict);
int	pthread_cond_timedwait(pthread_cond_t * __restrict,
	    pthread_mutex_t * __restrict, const struct timespec * __restrict);
int	pthread_cond_signal(pthread_cond_t *);
int	pthread_condattr_init(pthread_condattr_t *);
int	pthread_condattr_destroy(pthread_condattr_t *);
int	pthread_key_create(pthread_key_t *, void (*)(void *));
int	pthread_setspecific(pthread_key_t, const void *);
void*	pthread_getspecific(pthread_key_t);
int	pthread_setschedparam(pthread_t, int, const struct sched_param *);
#define	PTHREAD_CREATE_DETACHED	1
#define	PTHREAD_PRIO_NONE		0
#define	PTHREAD_PRIO_INHERIT		1
#define	PTHREAD_PRIO_PROTECT		2
#define	pthread_mutex_lock		__libc_mutex_lock
#define	pthread_mutex_unlock		__libc_mutex_unlock
#define	pthread_mutex_destroy		__libc_mutex_destroy
#define	pthread_mutexattr_init		__libc_mutexattr_init
#define	pthread_mutexattr_destroy	__libc_mutexattr_destroy
#define	pthread_cond_signal		__libc_cond_signal
#define	pthread_cond_wait		__libc_cond_wait
#define	pthread_cond_timedwait		__libc_cond_timedwait
#define	pthread_cond_destroy		__libc_cond_destroy
#define	pthread_setspecific		__libc_thr_setspecific
#define	pthread_getspecific		__libc_thr_getspecific
#define	pthread_self			__libc_thr_self
#define	pthread_exit			__libc_thr_exit